--- a/BDD-Stack-Core/build.gradle
+++ b/BDD-Stack-Core/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     api('org.slf4j:slf4j-simple:1.8.0-beta4')
 	
 	api('org.springframework.boot:spring-boot-autoconfigure:2.1.7.RELEASE')
-	// api('org.yaml:snakeyaml:1.24')
+	api('org.yaml:snakeyaml:1.24')
 	testCompile('org.springframework.boot:spring-boot-starter-test:2.1.7.RELEASE')
 	
 }
