--- a/BDD-Stack-Core/build.gradle
+++ b/BDD-Stack-Core/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	
 	api('org.springframework.boot:spring-boot-autoconfigure:2.1.7.RELEASE')
 	api('org.yaml:snakeyaml:1.24')
-	testCompile('org.springframework.boot:spring-boot-starter-test:2.1.7.RELEASE')
+	api('org.springframework.boot:spring-boot-starter-test:2.1.7.RELEASE')
 	
 }
 
